@@ -1,3 +1,5 @@
+HEAD
+	+ Show error in module status table
 4.0
 	+ sudoers-friendly take user to whatever module which implenents extraSudoerUsers
 	+ Implement data in use in JS for forms
